welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: type mismatch;
 found   : java.awt.Color
 required: Int
    Couleurs(i) = getCouleurSol()
                               ^Array1:11: error: value Couleurs is not a member of object java.awt.Color
      setCouleurBrosse(Color.Couleurs(i))
                             ^Array1:12: error: not found: value poseBrosse
      poseBrosse(); leveBrosse()
      ^